Add --add-opens to Docker images
This was needed to allow an EOL program like this to run correctly:

--
var x = Sequence {1..20};

x.subList(1, 5).subList(1, 3).println();
--